crates/java-syntax/tests/snapshots/lexer_snapshots__lex_floating_point_literals_hex.snap
---
source: crates/java-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
0x1.0p3 0x.8P-2f
TOKENS:
NUMBER_LITERAL "0x1.0p3"
WHITESPACE " "
NUMBER_LITERAL "0x.8P-2f"

LEX_ERRORS:
<none>
