crates/java-syntax/tests/snapshots/lexer_snapshots__lex_integer_literals_binary.snap
---
source: crates/java-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
0b0 0B1010_0101 0b11L
TOKENS:
NUMBER_LITERAL "0b0"
WHITESPACE " "
NUMBER_LITERAL "0B1010_0101"
WHITESPACE " "
NUMBER_LITERAL "0b11L"

LEX_ERRORS:
<none>
