crates/java-syntax/tests/snapshots/lexer_snapshots__lex_integer_literals_hex.snap
---
source: crates/java-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
0x0 0x1A2B 0XCAFE_BABE 0xFFl
TOKENS:
NUMBER_LITERAL "0x0"
WHITESPACE " "
NUMBER_LITERAL "0x1A2B"
WHITESPACE " "
NUMBER_LITERAL "0XCAFE_BABE"
WHITESPACE " "
NUMBER_LITERAL "0xFFl"

LEX_ERRORS:
<none>
