crates/java-syntax/tests/snapshots/lexer_snapshots__lex_string_literals.snap
---
source: crates/java-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
 "hello world" "escape \" test" "" 
TOKENS:
WHITESPACE " "
STRING_LITERAL "\"hello world\""
WHITESPACE " "
STRING_LITERAL "\"escape \\\" test\""
WHITESPACE " "
STRING_LITERAL "\"\""
WHITESPACE " "

LEX_ERRORS:
<none>
