crates/java-syntax/tests/snapshots/lexer_snapshots__lex_string_template_nested_expression.snap
---
source: crates/java-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
"Result: \{ new int[]{1, 2} }"

TOKENS:
STRING_TEMPLATE_BEGIN "\"Result: \\{"
WHITESPACE " "
NEW_KW "new"
WHITESPACE " "
INT_KW "int"
L_BRACKET "["
R_BRACKET "]"
L_BRACE "{"
NUMBER_LITERAL "1"
COMMA ","
WHITESPACE " "
NUMBER_LITERAL "2"
R_BRACE "}"
WHITESPACE " "
STRING_TEMPLATE_END "}\""
WHITESPACE "\n"

LEX_ERRORS:
<none>
