crates/java-syntax/tests/snapshots/lexer_snapshots__lex_tilde.snap
---
source: crates/java-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
~1

TOKENS:
TILDE "~"
NUMBER_LITERAL "1"
WHITESPACE "\n"

LEX_ERRORS:
<none>
